# waveshare_evdev

./: .gitignore  CMakeLists.txt  README.md  main.cpp  message.cpp  message.h  touchscreen.cpp  touchscreen.h  waveshare.service
